--- a/.github/workflows/coding_convention.yaml
+++ b/.github/workflows/coding_convention.yaml
@@ -35,12 +35,12 @@ jobs:
         git config diff.renameLimit 999999
         git fetch origin 
         touch CodingConventionResult.log
-        git diff --name-only origin/gen-firmware-on-host-runner  origin/update-source-code-lib-iec60730 | xargs pre-commit run --files 
+        git diff --name-only origin/gen-firmware-on-host-runner  origin/update-source-code-lib-iec60730 | xargs -n 1 pre-commit run --files | xargs | tee CodingConventionResult.txt
     - name: Upload Result
       if: always()
       uses: actions/upload-artifact@v4.3.4
       with:
-        name: CodingConventionResult.log
-        path: .
+        name: CodingConventionResult.txt
+        path: CodingConventionResult.txt
         warn: Output a warning but do not fail the action
         retention-days: 90
