--- a/.github/workflows/unit_test_auto.yaml
+++ b/.github/workflows/unit_test_auto.yaml
@@ -14,6 +14,10 @@ jobs:
       uses: actions/checkout@v4.1.7
     - name: Unit Testing
       run: |
+        export TOOL_DIRS=~/SimplicityStudio_v5/developer/toolchains/gnu_arm/12.2.rel1_2023.7/bin
+        export SDK_PATH=~/SimplicityStudio/SDKs/gecko_sdk
+        export TOOL_CHAINS=GCC
+        export START_ADDR_FLASH=0x8000000
         make prepare
         cd build
         cmake --toolchain ../cmake/toolchain.cmake .. -DENABLE_UNIT_TESTING=ON -DBOARD_NAME=brd4187c
