--- a/.github/workflows/generate_firmware.yaml
+++ b/.github/workflows/generate_firmware.yaml
@@ -3,8 +3,8 @@ on:
   push:
 
 env:
-  TOOL_DIRS: ~/SimplicityStudio_v5/developer/toolchains/gnu_arm/12.2.rel1_2023.7/bin
-  SDK_PATH: ~/SimplicityStudio/SDKs/gecko_sdk
+  TOOL_DIRS: /home/sqa/SimplicityStudio_v5/developer/toolchains/gnu_arm/12.2.rel1_2023.7/bin
+  SDK_PATH: /home/sqa/SimplicityStudio/SDKs/gecko_sdk
   TOOL_CHAINS: GCC
   START_ADDR_FLASH: 0x8000000
 jobs:
