--- a/.github/workflows/generate_firmware.yaml
+++ b/.github/workflows/generate_firmware.yaml
@@ -10,7 +10,7 @@ env:
 jobs:
   job1:
     name: Generate Firmware
-    runs-on: ubuntu-20.04
+    runs-on: [self-hosted, ds-sqa-hn-003]
     permissions:
       contents: read
       pull-requests: write
