--- a/.github/workflows/coding_convention.yaml
+++ b/.github/workflows/coding_convention.yaml
@@ -27,7 +27,7 @@ jobs:
       if: always()
       uses: actions/upload-artifact@v4.3.4
       with:
-        name: CodingConventionTool.txt
+        name: CodingConventionResult
         path: CodingConventionTool.txt
         warn: Output a warning but do not fail the action
         retention-days: 90
