--- a/.github/workflows/generate_firmware.yaml
+++ b/.github/workflows/generate_firmware.yaml
@@ -37,7 +37,7 @@ jobs:
         pwd
         ls -la
         chmod -R 777 . 
-        cd Test/
+        cd test/
         ls -la
         ./generate_fw.sh $COMMAND $COMPONENT $PLATFORM $COMPILER $SECURITY
     - name: Upload artifact
