--- a/.github/workflows/generate_firmware.yaml
+++ b/.github/workflows/generate_firmware.yaml
@@ -3,14 +3,14 @@ on:
   push:
 
 env:
-  TOOL_DIRS: /home/sqa/SimplicityStudio_v5/developer/toolchains/gnu_arm/10.3_2021.10/bin
+  TOOL_DIRS: /home/sqa/SimplicityStudio-5/SimplicityStudio_v5/developer/toolchains/gnu_arm/10.3_2021.10/bin
   SDK_PATH: /home/sqa/SimplicityStudio/SDKs/gecko_sdk
   TOOL_CHAINS: GCC
   START_ADDR_FLASH: 0x8000000
 jobs:
   job1:
     name: Generate Firmware
-    runs-on: [self-hosted, ds-sqa-hn-003]
+    runs-on: [self-hosted, ds-sqa-hn-iec]
     permissions:
       contents: read
       pull-requests: write
@@ -28,11 +28,7 @@ jobs:
 
     - name: Generate Firmware
       run: |
-        export TOOL_DIRS=/home/sqa/SimplicityStudio_v5/developer/toolchains/gnu_arm/10.3_2021.10/bin
-        export SDK_PATH=/home/sqa/SimplicityStudio/SDKs/gecko_sdk
-        export TOOL_CHAINS=GCC
-        export START_ADDR_FLASH=0x8000000
-        export PATH="/home/sqa/slc_cli/:$PATH"
+        export TOOL_DIRS=/home/sqa/SimplicityStudio-5/SimplicityStudio_v5/developer/toolchains/gnu_arm/10.3_2021.10/bin
         pwd
         ls -la
         chmod -R 777 . 
