--- a/.github/workflows/coding_convention.yaml
+++ b/.github/workflows/coding_convention.yaml
@@ -9,7 +9,7 @@ env:
 jobs:
   job1:
     name: Check coding convention
-    runs-on: ubuntu-20.04
+    runs-on: [ds-sqa-hn-003]
     steps:
     - name: Checkout
       uses: actions/checkout@v4.1.7
