--- a/.github/workflows/coding_convention.yaml
+++ b/.github/workflows/coding_convention.yaml
@@ -1,3 +1,4 @@
+
 name: Coding Convention
 on: 
   push:
@@ -9,22 +10,19 @@ env:
 jobs:
   job1:
     name: Check coding convention
-    runs-on: [ds-sqa-hn-003]
+    runs-on: [self-hosted, ds-sqa-hn-003]
     steps:
     - name: Checkout
       uses: actions/checkout@v4.1.7
       with:
         ref: update-source-code-lib-iec60730
-    - name: Prepare environment
+    - name: Check working directory
       run: |
-        pip install pre-commit
-        sudo apt install clang-format clang-tidy cppcheck
         pwd 
         ls -la
     - name: Run test
       run:
-        pre-commit install
-        pre-commit run --all-files > CodingConventionTool.txt
+        git diff --name-only origin/gen-firmware-on-host-runner  origin/update-source-code-lib-iec60730 | xargs pre-commit run --files > CodingConventionTool.txt
           
     - name: Upload Result
       if: always()
