--- a/.github/workflows/generate_firmware.yaml
+++ b/.github/workflows/generate_firmware.yaml
@@ -17,7 +17,7 @@ env:
 jobs:
   job1:
     name: Generate Firmware
-    runs-on: [self-hosted, ds-sqa-hn-iec]
+    runs-on: ubuntu-20.04
     permissions:
       contents: read
       pull-requests: write
