--- a/.github/workflows/generate_firmware.yaml
+++ b/.github/workflows/generate_firmware.yaml
@@ -68,6 +68,11 @@ jobs:
       run: |
         wget $COMMANDER_URL
         unzip SimplicityCommander-Linux.zip
+        cd SimplicityCommander-Linux
+        ls -la
+        mkdir commander
+        tar -xf Commander_linux_x86_64_*.tar.bz -C $PWD/commander
+        cd commander
         ls -la
     - name: Install GCC
       if: always()
