--- a/.github/workflows/generate_firmware.yaml
+++ b/.github/workflows/generate_firmware.yaml
@@ -10,6 +10,7 @@ env:
   SIM_REPO: https://github.com/SiliconLabs/simplicity_sdk.git
   GECKO_SDK_REPO: https://github.com/SiliconLabs/gecko_sdk.git
   SDK_VER: v4.4.2
+  JLINK_SEGGER_URL: https://www.segger.com/downloads/jlink/JLink_Linux_x86_64.deb
   TOOL_DIRS: /home/sqa/SimplicityStudio-5/SimplicityStudio_v5/developer/toolchains/gnu_arm/10.3_2021.10/bin
   SDK_PATH: /home/sqa/SimplicityStudio/SDKs/gecko_sdk
   TOOL_CHAINS: GCC
@@ -79,7 +80,12 @@ jobs:
         wget $GCC_URL
         tar -xf arm-gnu-toolchain-12.2.rel1-x86_64-arm-none-eabi.tar.xz
         ls -la
-    - name: Check environment
+    - name: Install JLink SEGGER
+      if: always()
+      run: |
+        wget $JLINK_SEGGER_URL
+        sudo dpkg -i JLink_Linux_x86_64.deb
+    - name: Install python3.11
       run: |
         python --version
     
