--- a/.github/workflows/generate_firmware.yaml
+++ b/.github/workflows/generate_firmware.yaml
@@ -80,22 +80,20 @@ jobs:
         wget $GCC_URL
         tar -xf arm-gnu-toolchain-12.2.rel1-x86_64-arm-none-eabi.tar.xz
         ls -la
-    - name: Install JLink SEGGER
-      if: always()
-      run: |
-        mkdir SEGGER
-        cd SEGGER
-        wget $JLINK_SEGGER_URL
-        ls -la
-        tar xf JLink_Linux_x86_64.tgz
-        chmod a-w $PWD/JLink_Linux_x86_64
-        ls -la $PWD/JLink_Linux_x86_64
-        sudo cp $PWD/JLink_Linux*/99-jlink.rules /etc/udev/rules.d/99-jlink.rules
         
     - name: Install python3.11
       if: always()
       run: |
+        sudo apt update
+        sudo apt upgrade
+        sudo add-apt-repository ppa:deadsnakes/ppa -y
+        sudo apt update
+        sudo apt install python3.11
+        python3.11 --version
+        alias python=python3.11
         python --version
+        sudo apt install python3.11-full
+        sudo apt install python3-pip
     
     
           
