--- a/.github/workflows/generate_firmware.yaml
+++ b/.github/workflows/generate_firmware.yaml
@@ -90,7 +90,9 @@ jobs:
         sudo apt update
         sudo apt install python3.11
         python3.11 --version
-        alias python='/usr/local/bin/python3.11' >> ~/.bashrc
+        which python3.11
+        echo alias python=${which python3.11} >> ~/.bashrc
+        cat ~/.bashrc
         source ~/.bashrc
         python --version
         sudo apt install python3.11-full
