--- a/.github/workflows/generate_firmware.yaml
+++ b/.github/workflows/generate_firmware.yaml
@@ -94,7 +94,7 @@ jobs:
         cat ~/.bashrc
         echo alias python='/usr/bin/python3.11' >> ~/.bashrc
         cat ~/.bashrc
-        source ~/.bashrc
+        sudo source ~/.bashrc
         python --version
         sudo apt install python3.11-full
         sudo apt install python3-pip
