--- a/.github/workflows/generate_firmware.yaml
+++ b/.github/workflows/generate_firmware.yaml
@@ -92,10 +92,10 @@ jobs:
         python3.11 --version
         which python3.11
         cat ~/.bashrc
-        echo alias python='/usr/bin/python3.11' >> ~/.bashrc
+        echo "alias python=python3.11" >> ~/.bashrc
         cat ~/.bashrc
-        sudo source ~/.bashrc
-        python --version
+        source ~/.bashrc
+        python3 --version
         sudo apt install python3.11-full
         sudo apt install python3-pip
     
