--- a/.github/workflows/generate_firmware.yaml
+++ b/.github/workflows/generate_firmware.yaml
@@ -100,8 +100,10 @@ jobs:
         python3.11 --version
         which python3.11
         cat ~/.bashrc
-        echo "alias python=python3.11" >> ~/.bashrc
+        echo "alias python3=python3.11" >> ~/.bashrc
+        echo "alias python3=python3.11" >> ~/.bash_profile
         cat ~/.bashrc
+        source ~/.bash_profile
         source ~/.bashrc
         python3 --version
         sudo apt install python3.11-full
