--- a/.github/workflows/generate_firmware.yaml
+++ b/.github/workflows/generate_firmware.yaml
@@ -119,7 +119,7 @@ jobs:
         export SDK_PATH=$PWD/gecko_sdk_$SDK_VER
         export PATH=$PATH:$PWD/amazon-corretto-17.0.12.7.1-linux-x64/bin
         echo $PATH
-        sudo update-alternatives --config javac
+        sudo update-alternatives --config javac 2
         slc --version
         slc configuration --sdk=${SDK_PATH}
         ninja --version
