--- a/.github/workflows/generate_firmware.yaml
+++ b/.github/workflows/generate_firmware.yaml
@@ -20,7 +20,7 @@ env:
 jobs:
   job1:
     name: Generate Firmware
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-20.04
     permissions:
       contents: read
       pull-requests: write
@@ -119,7 +119,7 @@ jobs:
         export SDK_PATH=$PWD/gecko_sdk_$SDK_VER
         export PATH=$PATH:$PWD/amazon-corretto-17.0.12.7.1-linux-x64/bin
         echo $PATH
-        sudo update-alternatives --config javac 2
+        sudo alternatives --set java /usr/lib/jvm/temurin-17-jdk-amd64/bin/javac
         slc --version
         slc configuration --sdk=${SDK_PATH}
         ninja --version
