--- a/.github/workflows/generate_firmware.yaml
+++ b/.github/workflows/generate_firmware.yaml
@@ -119,7 +119,7 @@ jobs:
         export SDK_PATH=$PWD/gecko_sdk_$SDK_VER
         export PATH=$PATH:$PWD/amazon-corretto-17.0.12.7.1-linux-x64/bin
         echo $PATH
-        alternatives --set java /usr/lib/jvm/temurin-17-jdk-amd64/bin/javac
+        echo 2 | sudo update-alternatives --config java
         slc --version
         slc configuration --sdk=${SDK_PATH}
         ninja --version
