--- a/.github/workflows/generate_firmware.yaml
+++ b/.github/workflows/generate_firmware.yaml
@@ -42,7 +42,6 @@ jobs:
     - name: Install Simplicity SDK
       if: always()
       run: |
-        java --version
         git clone $SIM_REPO
         cd simplicity_sdk
         ls -la
@@ -89,7 +88,11 @@ jobs:
         ls -la
         cd arm-gnu-toolchain-12.2.rel1-x86_64-arm-none-eabi
         ls -la
-        
+    - name: Install Ninja build
+      run: |
+        sudo apt update
+        sudo apt -y install ninja-build
+        ninja --version
     - name: Install python3.11
       if: always()
       run: |
@@ -120,6 +123,7 @@ jobs:
         export PATH=$PATH:$PWD/amazon-corretto-17.0.12.7.1-linux-x64/bin
         echo $PATH
         echo 2 | sudo update-alternatives --config java
+        java --version
         slc --version
         slc configuration --sdk=${SDK_PATH}
         ninja --version
