--- a/.github/workflows/coding_convention.yaml
+++ b/.github/workflows/coding_convention.yaml
@@ -1,28 +1,43 @@
 
 name: Coding Convention
-on: 
+on:
   push:
-    branches:
-      - '**'
+    branches:    
+      - '*'         # matches every branch that doesn't contain a '/'
+      - '*/*'       # matches every branch containing a single '/'
+      - '**'        # matches every branch
 env:
  BRANCH_NAME: ${{ github.head_ref || github.ref_name }} 
  REPO_LINK: https://github.com/${{ github.repository }}.git
 jobs:
   job1:
     name: Check coding convention
-    runs-on: [self-hosted, ds-sqa-hn-003]
+    runs-on: ubuntu-20.04
     steps:
     - name: Checkout
       uses: actions/checkout@v4.1.7
       with:
         ref: update-source-code-lib-iec60730
-    - name: Check working directory
+    - name: Install python3.11
+      if: always()
       run: |
-        pwd 
-        ls -la
+        sudo apt update
+        sudo apt upgrade
+        sudo add-apt-repository ppa:deadsnakes/ppa -y
+        sudo apt update
+        sudo apt install python3.11
+        python3.11 --version
+        which python3.11
+        sudo apt install python3.11-full
+        sudo apt install python3-pip
+    - name: Install Pre-commmit
+      run: |
+        python3.11 -m pip install pre-commit
+        sudo apt install uncrustify clang-tidy cppcheck
     - name: Run test
       run:
-        git diff --name-only origin/gen-firmware-on-host-runner  origin/update-source-code-lib-iec60730 | xargs pre-commit run --files > CodingConventionTool.txt
+        pre-commit install
+        git diff --name-only origin/main  origin/update-source-code-lib-iec60730 | xargs pre-commit run --files > CodingConventionTool.txt
           
     - name: Upload Result
       if: always()
