--- a/.github/workflows/coding_convention.yaml
+++ b/.github/workflows/coding_convention.yaml
@@ -35,7 +35,7 @@ jobs:
         python3.11 -m pip install pre-commit
         sudo apt install uncrustify clang-tidy cppcheck
     - name: Run test
-      run:
+      run: |
         pre-commit install
         pre-commit run --all-files > CodingConventionTool.txt
           
