--- a/.github/workflows/unit_test_auto.yaml
+++ b/.github/workflows/unit_test_auto.yaml
@@ -17,16 +17,24 @@ jobs:
       uses: actions/checkout@v4.1.7
     - name: Unit Testing
       run: |
-        export TOOL_DIRS=~/SimplicityStudio_v5/developer/toolchains/gnu_arm/12.2.rel1_2023.7/bin
-        export SDK_PATH=~/SimplicityStudio/SDKs/gecko_sdk
-        export TOOL_CHAINS=GCC
+        export PATH=$PATH:/home/sqa/SimplicityStudio-5/SimplicityStudio_v5/developer/adapter_packs/commander
+        export PATH=$PATH=~/slc_cli
+        export JLINK_PATH=/opt/SEGGER/JLink/libjlinkarm.so
+        export TOOL_DIRS=/home/sqa/SimplicityStudio-5/SimplicityStudio_v5/developer/toolchains/gnu_arm/12.2.rel1_2023.7/bin
+        export PATH=$PATH:/usr/bin/
+        export SDK_PATH=/home/sqa/SimplicityStudio/SDKs/gecko_sdk
+        export PATH=$PATH:/home/sqa/amazon-corretto-17.0.12.7.1-linux-x64/bin
         export START_ADDR_FLASH=0x8000000
         export CHIP=EFR32MG24BXXXF1536 ADAPTER_SN=440133193
         export LST_PATH=~/devs_cooper_lighting_safty_lib/build/test/integration_test/build/brd4187c/integration_test_iec60730_watchdog/S
-        export JLINK_PATH=/opt/SEGGER/JLink/libjlinkarm.so
         export HOST_IP=192.168.1.69
+        slc configuration --sdk=${SDK_PATH}
+        ninja --version
+        slc signature trust --sdk $SDK_PATH
+        slc configuration -gcc=$TOOL_DIRS
         make prepare
         cd build
+        slc signature trust -extpath $SDK_PATH/extension/IEC60730_Libs
         cmake --toolchain ../cmake/toolchain.cmake .. -DENABLE_UNIT_TESTING=ON -DBOARD_NAME=brd4187c
         make unit_test_info -j4
         bash execute_unit_test.sh brd4187c all all $ADAPTER_SN GCC
